# deepvariant-pytorch

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  inference.py  inference_pt.py  pyproject.toml  tf2pytorch.py
pytorch_model/: inception.py
tensorflow_model/: keras_modeling.py
